--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                 <textarea class="form-control" id="message" rows="4"></textarea>
               </div>
  
-              <button type="submit" class="btn btn-primary">Submit</button>
+              <button type="submit" class="btn btn-success">Submit</button>
             </form>
           </div>
         </div>
