--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <!-- Bootstrap icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+    <!-- AOS Animate-->
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
     <!-- My Css -->
     <link rel="stylesheet" href="css/style.css">
@@ -48,27 +50,27 @@
 
     <!-- JUMBOTRON START -->
     <section class="jumbotron text-center">
-        <img src="img/jumbotron/rizky.png" alt="Rizky Kurniawan" width="200" class="rounded-circle img-thumbnail">
-        <h1 class="display-4 text-light">Rizky Kurniawan</h1>
-        <p class="lead text-light">Fresh Graduate | Front End Developer</p>
+        <img src="img/jumbotron/rizky.png" alt="Rizky Kurniawan" width="200" class="rounded-circle img-thumbnail" >     <!--  data-aos="fade-down" -->
+        <h1 class="display-4 text-light">Rizky Kurniawan </h1>
+        <p class="lead text-light"></p>
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#ffffff" fill-opacity="1" d="M0,160L40,186.7C80,213,160,267,240,266.7C320,267,400,213,480,170.7C560,128,640,96,720,90.7C800,85,880,107,960,144C1040,181,1120,235,1200,229.3C1280,224,1360,160,1400,128L1440,96L1440,320L1400,320C1360,320,1280,320,1200,320C1120,320,1040,320,960,320C880,320,800,320,720,320C640,320,560,320,480,320C400,320,320,320,240,320C160,320,80,320,40,320L0,320Z" data-darkreader-inline-fill="" style="--darkreader-inline-fill:#007acc;"></path></svg>
       </section>
     <!-- JUMBOTRON END -->
 
     <!-- ABOUT START -->
     <section id="about" class="about">
-        <div class="container">
+        <div class="container"> <!-- data-aos="fade-in" data-aos-offset="350" data-aos-duration="1100" -->
             <div class="row text-center mb-5">
                 <div class="col">
-                    <h2>About Me</h2>
+                    <h2>About</h2>
                 </div>
             </div>
 
             <div class="row justify-content-center fs-5 text-center">
-                <div class="col-md-5">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis quasi quae eveniet, asperiores odio possimus illum dolores. Temporibus nobis ab in voluptatum ea at harum? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non, voluptatibus. Lorem ipsum dolor sit amet.</p>
+                <div class="col-md-5" data-aos="fade-right">
+                    <p>Hello! my name is Rizky Kurniawan, I am a fresh graduate from a private university in south Jakarta, majoring in Information Engineering. I started studying the web programming languages when I graduated and i really interested to building my career in web developer, especially frontend web developer, I started to explore it myself by studying through channels youtube from Web Programming UNPAS taught by Mr. Sandhika Galih he is a good person and awesome lecturer and also I learned it from others video, courses and a bootcamp web frontend developer.</p>
                 </div>
-                <div class="col-md-5">
+                <div class="col-md-5" data-aos="fade-left">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis voluptatum deleniti ab molestias, mollitia id distinctio similique provident, ad tempora ea aspernatur? Tenetur, provident non necessitatibus corporis facilis ad dolores! Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
                 </div>
             </div>
@@ -88,7 +90,7 @@
 
         <div class="row justify-content-center">
           <div class="col-md-4 mb-3">
-            <div class="card">
+            <div class="card" data-aos="zoom-out-right" data-aos-duration="500">
               <img src="img/project/foodproject.jpg" class="card-img-top" alt="Project 1  | FoodieFrenzzy">
               <div class="card-body">
                 <h5 class="card-title">FoodieFrenzzy</h5>
@@ -99,7 +101,7 @@
           </div>
 
           <div class="col-md-4 mb-3">
-            <div class="card">
+            <div class="card" data-aos="zoom-out-right" data-aos-duration="500" data-aos-delay="100">
               <img src="img/project/gamesproject.jpg" class="card-img-top" alt="Project 2  | FoodieFrenzzy">
               <div class="card-body">
                 <h5 class="card-title">FoodieFrenzzy</h5>
@@ -110,7 +112,7 @@
           </div>
 
           <div class="col-md-4 mb-3">
-            <div class="card">
+            <div class="card" data-aos="zoom-out-right" data-aos-duration="500" data-aos-delay="200">
               <img src="img/project/companyProject.jpg" class="card-img-top" alt="Project 3  | FoodieFrenzzy">
               <div class="card-body">
                 <h5 class="card-title">FoodieFrenzzy</h5>
@@ -121,7 +123,7 @@
           </div>
 
           <div class="col-md-4 mb-3">
-            <div class="card">
+            <div class="card" data-aos="zoom-out-right" data-aos-duration="500" data-aos-delay="300">
               <img src="img/project/sportsprojects.jpg" class="card-img-top" alt="Project 4  | Sports Center">
               <div class="card-body">
                 <h5 class="card-title">FoodieFrenzzy</h5>
@@ -132,7 +134,7 @@
           </div>
 
           <div class="col-md-4 mb-3">
-            <div class="card">
+            <div class="card" data-aos="zoom-out-right" data-aos-duration="500" data-aos-delay="400">
               <img src="img/project/aboutme.jpg" class="card-img-top" alt="Project 5  | FoodieFrenzzy">
               <div class="card-body">
                 <h5 class="card-title">FoodieFrenzzy</h5>
@@ -147,6 +149,92 @@
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#ffffff" fill-opacity="1" d="M0,32L48,58.7C96,85,192,139,288,165.3C384,192,480,192,576,165.3C672,139,768,85,864,80C960,75,1056,117,1152,133.3C1248,149,1344,139,1392,133.3L1440,128L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
     </section>
     <!-- PROJECT END -->
+
+    <!-- GALLERY START -->
+    <section id="gallery">
+      <div class="container">
+        <div class="row text-center mb-5 ms-3">
+          <div class="col">
+            <h2>My Gallery</h2>
+          </div>
+
+          <div class="row justify-content-center">
+            <div class="col-md-3">
+              <a href="#">
+                <img class="img-fluid gallery-img" src="img/gallery/img1.jpg" alt="gambar1">
+              </a>
+            </div>
+
+            <div class="col-md-3">
+              <a href="#">
+                <img class="img-fluid gallery-img" src="img/gallery/img2.jpg" alt="gambar2">
+              </a>
+            </div>
+
+            <div class="col-md-3">
+              <a href="#">
+                <img class="img-fluid gallery-img" src="img/gallery/img3.jpg" alt="gambar3">
+              </a>
+            </div>
+
+            <div class="col-md-3">
+              <a href="#">
+                <img class="img-fluid gallery-img" src="img/gallery/img4.jpg" alt="gambar4">
+              </a>
+            </div>
+
+            <div class="col-md-3">
+              <a href="#">
+                <img class="img-fluid gallery-img" src="img/gallery/img5.jpg" alt="gambar5">
+              </a>
+            </div>
+            
+            <div class="col-md-3">
+              <a href="#">
+                <img class="img-fluid gallery-img" src="img/gallery/img6.jpg" alt="gambar6">
+              </a>
+            </div>
+            
+            <div class="col-md-3">
+              <a href="#">
+                <img class="img-fluid gallery-img" src="img/gallery/img7.jpg" alt="gambar7">
+              </a>
+            </div>
+
+            <div class="col-md-3">
+              <a href="#">
+                <img class="img-fluid gallery-img" src="img/gallery/img8.jpg" alt="gambar8">
+              </a>
+            </div>
+
+            <div class="col-md-3">
+              <a href="#">
+                <img class="img-fluid gallery-img" src="img/gallery/img9.jpg" alt="gambar9">
+              </a>
+            </div>
+
+            <div class="col-md-3">
+              <a href="#">
+                <img class="img-fluid gallery-img" src="img/gallery/img10.jpg" alt="gambar10">
+              </a>
+            </div>
+
+            <div class="col-md-3">
+              <a href="#">
+                <img class="img-fluid gallery-img" src="img/gallery/img11.jpg" alt="gambar11">
+              </a>
+            </div>
+
+            <div class="col-md-3">
+              <a href="#">
+                <img class="img-fluid gallery-img" src="img/gallery/img12.jpg" alt="gambar12">
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- GALLERY END -->
 
     <!-- CONTACT START -->
     <section id="contact" class="contact">
@@ -218,6 +306,36 @@
     <!-- Option 1: Bootstrap Bundle with Popper (js cdn(online) nya bootstrap) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
+    <!-- AOS Javascript -->
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      const galleryImage = document.querySelectorAll('.gallery-img');
+      galleryImage.forEach((img, i) => {
+        img.dataset.aos = 'fade-down';
+        img.dataset.aosDelay = i * 100; //tergantung indeksnya, jadi setiap 100milisecond
+        img.dataset.aosDuration = 1000;
+      })
+
+      AOS.init();
+    </script>
+
+    <!-- GSAP Animate -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/TextPlugin.min.js"></script> <!-- GSAP TextPlugin-->
+    <script>
+      gsap.registerPlugin(TextPlugin);
+      gsap.to('.lead', {duration: 2, delay:1.5, text: 'Fresh Graduate | Front End Developer'})
+
+      gsap.from('.jumbotron img', { duration: 1, y:-800, opacity: 0, ease: 'power1' })
+      gsap.from('.navbar', {duration: 1.5, y: -300, opacity: 0, ease: 'power2'})
+      gsap.from('.display-4', {duration: 1, x: -100, opacity: 0, delay: 0.5, ease: 'back'})
+    </script>
+
+
+
+
+
+    <!-- MY SCRIPT -->
     <!-- Contact Form start -->
     <script>
       const scriptURL = 'https://script.google.com/macros/s/AKfycbw-KauFIcQcm2DuxBYH9oXEkeWhO_snKiR8Pgcz-PtFvaKyQHFH8zIRP8lxYKFVLh90/exec'  // link dari deployment appscriptnya google sheet (web app)
